--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     />
     <!--CSS-->
     <link rel="stylesheet" href="css/main.css" />
+    <!--Iconos-->
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -93,8 +95,23 @@
         </div>
       </div>
     </main>
-    <footer class="footer-box">
-      <a href="pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
+    <!-- footer -->
+    <footer class="pie-pagina">
+      <div class="grupo-1">
+        <div class="box">
+          <a href="pages/preguntasfrecuentes.html"><h2>Preguntas Frecuentes</h2></a>
+          <h2>SIGUENOS</h2>
+          <div class="red-social">
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <a href="https://twitter.com" class="fa fa-twitter"></a>
+            <a href="https://www.youtube.com" class="fa fa-youtube"></a>
+          </div>
+        </div>
+      </div>
+      <div class="grupo-2">
+        <small>&copy; 2022 - Todos los Derechos Reservados.</small>
+      </div>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
